tests/regression/illtyped/implicitLeakAlt.gr
data Bool where
  True : Bool;
  False : Bool

leak' : Bool |Private| -> Bool |Public|
leak' x =
      case x of
        |True|  ->  |True|;
        |False| ->  |False|

related : Int |2| -> Int |10|
related x =
   case x of
     |0| -> |0|;
     |1| -> |1|
